# netconsole2journal

./: CMakeLists.txt  README.md
src/: main.c
systemd/: README.md  netconsole2journal.service  netconsole2journal.socket
